--- a/AddressBookPL/appsettings.json
+++ b/AddressBookPL/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    "Local": "Data Source=MONSTER;Initial Catalog=AddressBookDB;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
+    "Home": "",
+    "Live": ""
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
