--- a/AddressBookDL/AddressBookDL.csproj
+++ b/AddressBookDL/AddressBookDL.csproj
@@ -23,4 +23,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AddressBookEL\AddressBookEL.csproj" />
+  </ItemGroup>
+
 </Project>
