--- a/AddressBookPL/AddressBookPL.csproj
+++ b/AddressBookPL/AddressBookPL.csproj
@@ -23,4 +23,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AddressBookDL\AddressBookDL.csproj" />
+  </ItemGroup>
+
 </Project>
