--- a/AddressBookPL/appsettings.json
+++ b/AddressBookPL/appsettings.json
@@ -11,5 +11,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailOptions": {
+    "SenderMail": "",
+    "Password": "",
+    "Smtp": "smtp-mail.outlook.com", //smtp-gmail.com gmaile destek klaktı.
+    "SmtpPort": "587" //25
+  },
+  "ProjectManagersEmails": ""
 }
