--- a/AddressBookPL/AddressBookPL.csproj
+++ b/AddressBookPL/AddressBookPL.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="AutoMapper" Version="11.0.0" />
     <PackageReference Include="AutoMapper.Extensions.ExpressionMapping" Version="5.1.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="ClosedXML" Version="0.95.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.4">
@@ -25,7 +26,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\AddressBookBL\AddressBookBL.csproj" />
     <ProjectReference Include="..\AddressBookDL\AddressBookDL.csproj" />
+    <ProjectReference Include="..\AddressBookEL\AddressBookEL.csproj" />
   </ItemGroup>
 
 </Project>
